force-app/main/default/objects/TimeRelacionamento__c/TimeRelacionamento__c.object-meta.xml
<CustomObject>
    <label>Time de Relacionamento</label>
    <nameField>
        <displayFormat>TMR - {0000}</displayFormat>
        <label>Nome de Time de Relacionamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times de Relacionamento</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>