force-app/main/default/objects/TimeRelacionamento__c/fields/DivisaoComissao__c.field-meta.xml
<CustomField>
    <fullName>DivisaoComissao__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Divisão de comissão</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>