force-app/main/default/objects/TimeRelacionamento__c/fields/GerenteIndicado__c.field-meta.xml
<CustomField>
    <fullName>GerenteIndicado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gerente indicado</label>
    <type>Checkbox</type>
</CustomField>