force-app/main/default/objects/TimeRelacionamento__c/fields/NomeGerente__c.field-meta.xml
<CustomField>
    <fullName>NomeGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimesRelacionamento</relationshipName>
    <type>Lookup</type>
</CustomField>