force-app/main/default/objects/TimeRelacionamento__c/fields/ProprietarioOpp__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proprietario da Opp</label>
    <type>Checkbox</type>
</CustomField>