force-app/main/default/objects/TimeRelacionamento__c/fields/TipoRelacionamento__c.field-meta.xml
<CustomField>
    <fullName>TipoRelacionamento__c</fullName>
    <label>Tipo de relacionamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>