force-app/main/default/objects/TimeRelacionamento__c/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <formula>TEXT( NomeGerente__r.UnidadeNegocio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Negócio</label>
    <type>Text</type>
</CustomField>