force-app/main/default/objects/TimeRelacionamento__c/recordTypes/Parceiro.recordType-meta.xml
<RecordType>
    <fullName>Parceiro</fullName>
    <active>true</active>
    <description>Cadastro de parceiros relacionados a Oportunidade</description>
    <label>Parceiro</label>
</RecordType>