force-app/main/default/objects/TimeRelacionamento__c/recordTypes/TimeRelacionamento.recordType-meta.xml
<RecordType>
    <fullName>TimeRelacionamento</fullName>
    <active>true</active>
    <description>Cadastro dos gerentes relacionados à oportunidade</description>
    <label>Time de relacionamento</label>
</RecordType>